* Big refactor
* License LGPL-3.0 (or later) added